Added feedback
Signed-off-by: Timo Brandstätter <timo@swirldslabs.com>